@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2008-2013 by Walter Brisken                             *
+ *   Copyright (C) 2015 by Walter Brisken                                  *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -19,41 +19,89 @@
 /*===========================================================================
  * SVN properties (DO NOT CHANGE)
  *
- * $Id$
+ * $Id: testdifxinput.c 5285 2013-05-08 07:14:47Z WalterBrisken $
  * $HeadURL: https://svn.atnf.csiro.au/difx/libraries/mark5access/trunk/mark5access/mark5_stream.c $
- * $LastChangedRevision$
- * $Author$
- * $LastChangedDate$
+ * $LastChangedRevision: 5285 $
+ * $Author: WalterBrisken $
+ * $LastChangedDate: 2013-05-08 01:14:47 -0600 (Wed, 08 May 2013) $
  *
  *==========================================================================*/
 
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
-#include "difxio/difx_input.h"
+#include "difx_input.h"
 
-const char program[] = "testdifxinput";
+const char program[] = "calculatedelays";
 const char author[]  = "Walter Brisken <wbrisken@nrao.edu>";
-const char version[] = "1.1";
-const char verdate[] = "20130508";
+const char version[] = "0.1";
+const char verdate[] = "20150622";
 
 void usage()
 {
 	printf("%s  ver. %s  %s  %s\n\n", program, version, author, verdate);
 	printf("Usage : %s [options] <inputfilebase1> [ <inputfilebase2> [...] ]\n\n", program);
 	printf("options can include:\n");
-	printf("--verbose\n");
-	printf("-v         be a bit more verbose\n\n");
 	printf("--help\n");
 	printf("-h         print help information and quit\n\n");
 	printf("<inputfilebaseN> is the base name of a difx fileset.\n\n");
+	printf("All normal program output goes to stdout.\n\n");
+	printf("This program reads through one or more difx datasets and\n");
+	printf("evaluates delay polynomials in the .im files on a regular\n");
+	printf("time grid (every 24 seconds).  Delays and rates are both\n");
+	printf("calculated.  Output should be self explanatory.\n\n");
+}
+
+/* Use Cramer's rule to evaluate polynomial */
+double evaluatePoly(const double *p, int n, double x)
+{
+	double y;
+	int i;
+
+	if(n == 1)
+	{
+		return p[0];
+	}
+
+	y = p[n-1];
+
+	for(i = n-2; i >= 0; i--)
+	{
+		y = x*y + p[i];
+	}
+
+	return y;
+}
+
+double evaluatePolyDeriv(const double *p, int n, double x)
+{
+	double y;
+	int i;
+
+	if(n == 1)
+	{
+		return 0;
+	}
+
+	if(n == 2)
+	{
+		return p[1];
+	}
+
+	y = (n-1)*p[n-1];
+
+	for(i = n-2; i >= 1; i--)
+	{
+		y = x*y + i*p[i];
+	}
+
+	return y;
 }
 
 int main(int argc, char **argv)
 {
 	DifxInput *D = 0;
-	int a;
-	int verbose = 0;
+	int a, s;
 	int mergable, compatible;
 	int nJob = 0;
 	
@@ -61,13 +109,7 @@ int main(int argc, char **argv)
 	{
 		if(argv[a][0] == '-')
 		{
-			if(strcmp(argv[a], "-v") == 0 ||
-			   strcmp(argv[a], "--verbose") == 0)
-			{
-				++verbose;
-				continue;
-			}
-			else if(strcmp(argv[a], "-h") == 0 ||
+			if(strcmp(argv[a], "-h") == 0 ||
 			   strcmp(argv[a], "--help") == 0)
 			{
 				usage();
@@ -102,13 +144,13 @@ int main(int argc, char **argv)
 				compatible = areDifxInputsCompatible(D1, D2);
 				if(mergable && compatible)
 				{
-					D = mergeDifxInputs(D1, D2, verbose);
+					D = mergeDifxInputs(D1, D2, 0);
 					deleteDifxInput(D1);
 					deleteDifxInput(D2);
 				}
 				else
 				{
-					printf("cannot merge job %s: mergable=%d compatible=%d\n", argv[a], mergable, compatible);
+					fprintf(stderr, "cannot merge job %s: mergable=%d compatible=%d\n", argv[a], mergable, compatible);
 					deleteDifxInput(D1);
 					deleteDifxInput(D2);
 					D = 0;
@@ -134,7 +176,7 @@ int main(int argc, char **argv)
 
 	if(nJob == 0)
 	{
-		printf("Nothing to do!  Quitting.  Run with -h for help information\n");
+		fprintf(stderr, "Nothing to do!  Quitting.  Run with -h for help information\n");
 
 		return EXIT_SUCCESS;
 	}
@@ -153,11 +195,72 @@ int main(int argc, char **argv)
 	strcpy(D->job->imFile, "im.test");
 	strcpy(D->job->outputFile, "output.test");
 
-	printDifxInput(D);
+	printf("# produced by program %s ver. %s\n\n", program, version);
+	printf("# Columns are:\n");
+	printf("# 1. mjd [day]\n");
+	for(a = 0; a < D->nAntenna; ++a)
+	{
+		printf("# %d. Antenna %d (%s) delay [us]\n", 2+2*a, a, D->antenna[a].name);
+		printf("# %d. Antenna %d (%s) rate [us/s]\n", 3+2*a, a, D->antenna[a].name);
+	}
 
-	writeDifxCalc(D);
-	writeDifxInput(D);
-	writeDifxIM(D);
+	for(s = 0; s < D->nScan; ++s)
+	{
+		const DifxScan *ds;
+		int refAnt;	/* points to a valid antenna in this poly */
+		int p, i;
+
+		ds = D->scan + s;
+
+		printf("\n# scan %d of %d: source = %s\n", s+1, D->nScan, D->source[ds->phsCentreSrcs[0]].name);
+
+		for(refAnt = 0; refAnt < D->nAntenna; ++refAnt)
+		{
+			if(ds->im[refAnt])
+			{
+				break;
+			}
+		}
+		if(refAnt >= D->nAntenna)
+		{
+			/* Huh, no delays for any antennas...? */
+
+			printf("#   No delays\n");
+
+			break;
+		}
+
+		for(p = 0; p < ds->nPoly; ++p)
+		{
+			const int N = (p == ds->nPoly-1) ? 6 : 5;
+
+			for(i = 0; i < N; ++i)
+			{
+				printf("%14.8f", ds->im[refAnt][0][p].mjd + (ds->im[refAnt][0][p].sec + i*24)/86400.0);
+
+				for(a = 0; a < D->nAntenna; ++a)
+				{
+					double d, r;
+
+					if(ds->im[a] == 0)
+					{
+						/* print zeros in cases where there is no data */
+						d = r = 0.0;
+					}
+					else
+					{
+						d = evaluatePoly(ds->im[a][0][p].delay, ds->im[a][0][p].order+1, 24*i);
+						r = evaluatePolyDeriv(ds->im[a][0][p].delay, ds->im[a][0][p].order+1, 24*i);
+					}
+
+					/* print to picosecond and picosecond/sec precision */
+					printf("   %12.6f %9.6f", d, r);
+				}
+
+				printf("\n");
+			}
+		}
+	}
 
 	deleteDifxInput(D);
 
